# Carbon-Stream

./: .gitignore  .user.yml  Dockerfile  README.md  docker-compose.yml  profiles.yml  pyproject.toml
Docs/: description.md  problem_definition.md  project_phases.md
carbon_stream/: .user.yml  dbt_project.yml  profiles.yml
carbon_stream/models/mart/: fct_emissions_by_country.sql
carbon_stream/models/staging/: sources.yml
carbon_stream/models/staging/ct/: stg_ct_agriculture.sql  stg_ct_buildings.sql  stg_ct_power.sql  stg_ct_transportation.sql  stg_ct_waste.sql
carbon_stream/models/staging/gcp/: stg_gcp_emissions.sql
carbon_stream/models/staging/wb/: stg_wb_context.sql  stg_wb_emissions.sql
docs/: analytical_questions.txt
extraction/: cdsload.py  cdstest.py  config.py  countries.json  enriched_countries.json  indicators.json  pipeline.py  script.py  wbdatatest.py  wbload.py
loading/: ctload.py
