[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "psycopg[binary]>=3.0",
    "wbdata>=1.0.0",
    "psycopg2-binary>=2.9.12",
    "cdsapi>=0.7.7",
    "xarray>=2024.7.0",
    "netcdf4>=1.7.2",
]
